# Testing-Quality-Assurance-and-Maintenance

./: .gitignore  README.md
a0/a0/: README.md  user.yml
a1/: README.md  README.wlang.md  requirements.txt
a1/a1q3/: __init__.py  __main__.py  coverage_tests.py  test.py
a1/wlang/: parser.py  stats_visitor.py  test.py  test_int.py  test_stats_visitor.py  test_undef_visitor.py  undef_visitor.py
a2/: README.md
a2/a2q3/: magic_square.py  puzzle_tests.py  test.py
a2/wlang/: ast.py  int.py  stats_visitor.py  sym.py  test.py  test_stats_visitor.py  test_sym.py  test_undef_visitor.py
a3/: README.md
a3/dafny/: CalcTerm.dfy  SlowMax.dfy
a3/dafny/pancakesort/: PancakeSort.dfy  findmax.dfy  flip.dfy
a3/dafny/quicksort/: QuickSort.dfy  part.dfy  preds.dfy
a3/wlang/: diverge.wl  q4d.prg  semantics.py  stmt_counter.py  sym.py  test_int.py  test_sym.py  undef_visitor.py  util.py
fb/: .gitignore  CMakeLists.txt  README.md
fb/docker/: README.md  fuzz-doom.Dockerfile
fb/report/: default.profdata  report.md  src_report.info
fb/scripts/: README.md  generate-coverage-report.sh  run-fuzzing.sh
fb/src/: CMakeLists.txt  fuzz_target.c
